name:                 penumbra
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               Martin Galese
maintainer:           martin@galese.net
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable penumbra
  main-is:              Main.hs
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5,
                        random,
                        MonadRandom,
                        hscurses,
                        containers,
                        lens,
                        mtl,
                        aeson,
                        data-default
  hs-source-dirs:       src
  default-language:     Haskell2010
